chore: enabled react native new architecture

--- a/apps/today/app.json
+++ b/apps/today/app.json
@@ -31,7 +31,19 @@
       "favicon": "./assets/favicon.png",
       "bundler": "metro"
     },
-    "plugins": [],
+    "plugins": [
+      [
+        "expo-build-properties",
+        {
+          "ios": {
+            "newArchEnabled": true
+          },
+          "android": {
+            "newArchEnabled": true
+          }
+        }
+      ]
+    ],
     "extra": {
       "eas": {
         "projectId": "a3d414e0-f84e-45e4-9f24-cd558ee2ae0e"
