chore: add expo router

--- a/apps/today/package.json
+++ b/apps/today/package.json
@@ -28,7 +28,13 @@
     "@expo/metro-config": "*",
     "react-native-svg-transformer": "*",
     "react": "*",
-    "expo-build-properties": "*"
+    "expo-build-properties": "*",
+    "expo-router": "*",
+    "react-native-safe-area-context": "*",
+    "react-native-screens": "*",
+    "expo-linking": "*",
+    "expo-constants": "*",
+    "expo-status-bar": "*"
   },
   "scripts": {
     "eas-build-pre-install": "cd ../../ && node tools/scripts/eas-build-pre-install.mjs . apps/today && cp yarn.lock apps/today",
@@ -36,5 +42,6 @@
     "android": "expo run:android",
     "ios": "expo run:ios"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "main": "index.js"
 }
