--- a/apps/today/app.json
+++ b/apps/today/app.json
@@ -1,5 +1,6 @@
 {
   "expo": {
+    "scheme": "today",
     "name": "Today",
     "slug": "today",
     "version": "1.0.0",
@@ -13,9 +14,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.anlitz.today"
