feat(shared/ui): add bottom tabs UI

--- a/apps/today/app.json
+++ b/apps/today/app.json
@@ -47,6 +47,7 @@
       "eas": {
         "projectId": "a3d414e0-f84e-45e4-9f24-cd558ee2ae0e"
       }
-    }
+    },
+    "userInterfaceStyle": "automatic"
   }
 }
