--- a/apps/today/.eslintrc.json
+++ b/apps/today/.eslintrc.json
@@ -4,7 +4,10 @@
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-      "rules": {}
+      "rules": {},
+      "parserOptions": {
+        "project": ["apps/today/tsconfig.*?.json"]
+      }
     },
     {
       "files": ["*.ts", "*.tsx"],
