--- a/apps/today/project.json
+++ b/apps/today/project.json
@@ -5,5 +5,15 @@
   "projectType": "application",
   "tags": ["type:app"],
   "// targets": "to see all targets run: nx show project today --web",
-  "targets": {}
+  "targets": {
+    "type-check": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "apps/today",
+        "commands": ["tsc -p tsconfig.app.json --noEmit"],
+        "forwardAllArgs": false,
+        "description": "Type check with tsc"
+      }
+    }
+  }
 }
