--- a/libs/shared/ui/project.json
+++ b/libs/shared/ui/project.json
@@ -5,5 +5,15 @@
   "projectType": "library",
   "tags": ["type:shared"],
   "// targets": "to see all targets run: nx show project shared-ui --web",
-  "targets": {}
+  "targets": {
+    "type-check": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "libs/shared/ui",
+        "commands": ["tsc -p tsconfig.lib.json --noEmit"],
+        "forwardAllArgs": false,
+        "description": "Type check with tsc"
+      }
+    }
+  }
 }
