--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "1.3.0",
     "react-native-web": "~0.19.11",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "twrnc": "^4.5.0"
   },
   "devDependencies": {
     "@expo/cli": "~0.18.13",
