feat(shared/ui): add renderPageContent

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -107,7 +107,13 @@
         "no-shadow": "off",
         "no-undef": "off",
         "@typescript-eslint/no-shadow": "error",
-        "react-hooks/exhaustive-deps": "error"
+        "react-hooks/exhaustive-deps": "error",
+        "react-native/no-raw-text": [
+          "error",
+          {
+            "skip": ["List.Subheader"]
+          }
+        ]
       }
     },
     {
