--- a/apps/today/package.json
+++ b/apps/today/package.json
@@ -42,7 +42,8 @@
     "expo-navigation-bar": "*",
     "twrnc": "*",
     "@faker-js/faker": "*",
-    "react-native-reanimated": "*"
+    "react-native-reanimated": "*",
+    "expo-application": "*"
   },
   "scripts": {
     "eas-build-pre-install": "cd ../../ && node tools/scripts/eas-build-pre-install.mjs . apps/today && cp yarn.lock apps/today",
