--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@expo/metro-config": "~0.18.1",
     "@expo/metro-runtime": "~3.2.1",
     "expo": "51.0.26",
+    "expo-application": "~5.9.1",
     "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
