--- a/apps/today/package.json
+++ b/apps/today/package.json
@@ -43,7 +43,8 @@
     "twrnc": "*",
     "@faker-js/faker": "*",
     "react-native-reanimated": "*",
-    "expo-application": "*"
+    "expo-application": "*",
+    "@react-native-async-storage/async-storage": "*"
   },
   "scripts": {
     "eas-build-pre-install": "cd ../../ && node tools/scripts/eas-build-pre-install.mjs . apps/today && cp yarn.lock apps/today",
