refactor(apps/today): add image, text to SignInPage

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,6 +19,7 @@
       "@entities/settings": ["libs/entities/settings/src/index.ts"],
       "@features/authentication": ["libs/features/authentication/src/index.ts"],
       "@features/settings": ["libs/features/settings/src/index.ts"],
+      "@pages/authentication": ["libs/pages/authentication/src/index.ts"],
       "@pages/settings": ["libs/pages/settings/src/index.ts"],
       "@shared/ui": ["libs/shared/ui/src/index.ts"]
     }
