--- a/apps/today/package.json
+++ b/apps/today/package.json
@@ -45,7 +45,8 @@
     "react-native-reanimated": "*",
     "expo-application": "*",
     "@react-native-async-storage/async-storage": "*",
-    "expo-secure-store": "*"
+    "expo-secure-store": "*",
+    "expo-image": "*"
   },
   "scripts": {
     "eas-build-pre-install": "cd ../../ && node tools/scripts/eas-build-pre-install.mjs . apps/today && cp yarn.lock apps/today",
