--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-application": "~5.9.1",
     "expo-build-properties": "~0.12.5",
     "expo-constants": "~16.0.2",
+    "expo-image": "~1.12.15",
     "expo-linking": "~6.3.1",
     "expo-navigation-bar": "~3.0.7",
     "expo-router": "~3.5.23",
