--- a/apps/today/package.json
+++ b/apps/today/package.json
@@ -46,7 +46,10 @@
     "expo-application": "*",
     "@react-native-async-storage/async-storage": "*",
     "expo-secure-store": "*",
-    "expo-image": "*"
+    "expo-image": "*",
+    "@react-native-firebase/app": "*",
+    "@react-native-firebase/auth": "*",
+    "@react-native-google-signin/google-signin": "*"
   },
   "scripts": {
     "eas-build-pre-install": "cd ../../ && node tools/scripts/eas-build-pre-install.mjs . apps/today && cp yarn.lock apps/today",
