--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@expo/metro-config": "~0.18.1",
     "@expo/metro-runtime": "~3.2.1",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-firebase/app": "^20.4.0",
+    "@react-native-firebase/auth": "^20.4.0",
+    "@react-native-google-signin/google-signin": "^12.2.1",
     "expo": "51.0.26",
     "expo-application": "~5.9.1",
     "expo-build-properties": "~0.12.5",
