refactor(widgets/page): add widgets/page lib

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,14 @@
                 ]
               },
               {
+                "sourceTag": "type:widgets",
+                "onlyDependOnLibsWithTags": [
+                  "type:features",
+                  "type:entities",
+                  "type:shared"
+                ]
+              },
+              {
                 "sourceTag": "type:features",
                 "onlyDependOnLibsWithTags": ["type:entities", "type:shared"]
               },
