refactor(features/task, entities/task): refactor pages/task

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,8 +18,10 @@
       "@entities/authentication": ["libs/entities/authentication/src/index.ts"],
       "@entities/page": ["libs/entities/page/src/index.ts"],
       "@entities/settings": ["libs/entities/settings/src/index.ts"],
+      "@entities/task": ["libs/entities/task/src/index.ts"],
       "@features/authentication": ["libs/features/authentication/src/index.ts"],
       "@features/settings": ["libs/features/settings/src/index.ts"],
+      "@features/task": ["libs/features/task/src/index.ts"],
       "@pages/authentication": ["libs/pages/authentication/src/index.ts"],
       "@pages/settings": ["libs/pages/settings/src/index.ts"],
       "@pages/task": ["libs/pages/task/src/index.ts"],
