--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -25,6 +25,8 @@
       "@pages/authentication": ["libs/pages/authentication/src/index.ts"],
       "@pages/settings": ["libs/pages/settings/src/index.ts"],
       "@pages/task": ["libs/pages/task/src/index.ts"],
+      "@shared/api": ["libs/shared/api/src/index.ts"],
+      "@shared/lib": ["libs/shared/lib/src/index.ts"],
       "@shared/ui": ["libs/shared/ui/src/index.ts"],
       "@widgets/page": ["libs/widgets/page/src/index.ts"]
     }
