--- a/apps/today/package.json
+++ b/apps/today/package.json
@@ -47,9 +47,9 @@
     "@react-native-async-storage/async-storage": "*",
     "expo-secure-store": "*",
     "expo-image": "*",
-    "@react-native-firebase/app": "*",
-    "@react-native-firebase/auth": "*",
-    "@react-native-google-signin/google-signin": "*"
+    "@react-native-google-signin/google-signin": "*",
+    "@supabase/supabase-js": "*",
+    "react-native-url-polyfill": "*"
   },
   "scripts": {
     "eas-build-pre-install": "cd ../../ && node tools/scripts/eas-build-pre-install.mjs . apps/today && cp yarn.lock apps/today",
