--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "@expo/metro-config": "~0.18.1",
     "@expo/metro-runtime": "~3.2.1",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-firebase/app": "^20.4.0",
-    "@react-native-firebase/auth": "^20.4.0",
     "@react-native-google-signin/google-signin": "^12.2.1",
+    "@supabase/supabase-js": "^2.45.3",
     "expo": "51.0.26",
     "expo-application": "~5.9.1",
     "expo-build-properties": "~0.12.5",
@@ -35,6 +34,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "1.3.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.11",
     "tslib": "^2.3.0",
     "twrnc": "^4.5.0"
