--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "nx": "19.6.1",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
+    "supabase": "^1.191.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.5.2"
