--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@expo/metro-runtime": "~3.2.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-google-signin/google-signin": "^12.2.1",
+    "@supabase-cache-helpers/postgrest-react-query": "^1.9.0",
     "@supabase/supabase-js": "^2.45.3",
+    "@tanstack/react-query": "^5.53.3",
     "expo": "51.0.26",
     "expo-application": "~5.9.1",
     "expo-build-properties": "~0.12.5",
@@ -36,6 +38,7 @@
     "react-native-svg-transformer": "1.3.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.11",
+    "tiny-invariant": "^1.3.3",
     "tslib": "^2.3.0",
     "twrnc": "^4.5.0"
   },
