--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo/metro-config": "~0.18.1",
     "@expo/metro-runtime": "~3.2.1",
+    "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@supabase-cache-helpers/postgrest-react-query": "^1.9.0",
@@ -29,6 +30,7 @@
     "expo-system-ui": "~3.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.53.0",
     "react-native": "0.74.1",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
@@ -40,7 +42,8 @@
     "react-native-web": "~0.19.11",
     "tiny-invariant": "^1.3.3",
     "tslib": "^2.3.0",
-    "twrnc": "^4.5.0"
+    "twrnc": "^4.5.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@expo/cli": "~0.18.13",
